  * Disable hardening for now.
  * Convert rules to dh.
    - Patch astdatadir: set datadir in /usr/share/asterisk instead of
      using an environment variable.
  * Patch pjproject: make pjproject optional.
    - Patch bzero: Simplify applying the above, and fix an interface
      stupidity inflicted by pjproject.
    - get-orig-source: remove res/pjproject from the source tarball.

  [ David Sarmiento ]
  * Re-enabled pjproject
  * Modified rules file to be able to build pjproject
  * Updated build-deps

 -- Tzafrir Cohen <tzafrir@debian.org>  Wed, 30 Jan 2013 23:58:29 +0200

asterisk (1:1.8.13.0~dfsg-1) unstable; urgency=high

  * New upstream release.
    - AST-2012-007 (CVE-2012-2947): Fix IAX receiving HOLD without
      suggested MOH class crash (Closes: #675204).
    - AST-2012-008 (CVE-2012-2948): remote crash issue in chan_skinny
      (Closes: #67521).
    - Patch gmime2.6 removed: merged upstream.
    - Patch sparc32_disable removed: hacks removed from Upstream Makefile.
  * Also pass LDFLAGS to menuselect (Closes: #664086 for real).
  * Fully strip-out the ilbc code (Closes: #665938, #665937).
    - Patch ilbc_disable to fix the build.
  * Patch httpd_port: Fix port number of Asterisk httpd.
  * While we're at it: Closes: #606959, which is a non-issue.

 -- Tzafrir Cohen <tzafrir@debian.org>  Wed, 16 May 2012 18:43:18 +0300

asterisk (1:1.8.11.1~dfsg-1) unstable; urgency=high

  * New upstream release, Closes: #670180:
    - AST-2012-004 - further Manager permission fixes (CVE-2012-2414).
    - AST-2012-005 - Heap overflow in chan_skinny (CVE-2012-2415).
    - AST-2012-006 - Remote crash on SIP "UPDATE" method (CVE-2012-2416).
  * Fix daemon status check in init.d script (Closes: #669378).
  * Patch menuselect_cflags: allow passing our flags to menuselect's build.
    - Use it t opass our CFLAGS to menuselect (Closes: #664086).

 -- Tzafrir Cohen <tzafrir@debian.org>  Wed, 25 Apr 2012 12:19:06 +0300

asterisk (1:1.8.10.1~dfsg-1) unstable; urgency=low
