@@ -1,19 +1,6 @@
-res/pjproject/build.mak
-res/pjproject/build/cc-auto.mak
-res/pjproject/build/os-auto.mak
-res/pjproject/config.log
-res/pjproject/config.status
-res/pjproject/pjlib-util/build/os-auto.mak
-res/pjproject/pjlib/build/os-auto.mak
-res/pjproject/pjlib/include/pj/compat/m_auto.h
-res/pjproject/pjlib/include/pj/compat/os_auto.h
-res/pjproject/pjmedia/build/os-auto.mak
-res/pjproject/pjmedia/include/pjmedia-codec/config_auto.h
-res/pjproject/pjmedia/include/pjmedia/config_auto.h
-res/pjproject/pjsip/include/pjsip/sip_autoconf.h
-res/pjproject/third_party/build/os-auto.mak
-res/pjproject/third_party/build/portaudio/os-auto.mak
+aclocal.m4
 doc/core-en_US.xml
 utils/poll.c
 menuselect/mxml/mxml.pc
 menuselect.makeopts
+menuselect/configure.lineno
