@@ -44,6 +44,8 @@ BUILDFLAGS += MAKECMDGOALS=dont-optimize
 # show full gcc arguments instead of [CC] and [LD]
 BUILDFLAGS += NOISY_BUILD=yes
 
+BUILDFLAGS += ASTDATADIR=/usr/share/asterisk ASTVARRUNDIR=/var/run/asterisk
+
 ifneq (,$(findstring debug,$(DEB_BUILD_OPTIONS)))
 	ENABLE_DEBUG += --enable-dev-mode
 endif
@@ -68,18 +70,15 @@ URL := http://downloads.asterisk.org/pub/telephony/asterisk/releases/asterisk-$(
 FETCH_ENV = PATH=$$PATH:$(CURDIR)/debian/dummyprogs
 
 override_dh_autoreconf:
+	if [ ! -r configure.debian_sav ]; then cp -a configure configure.debian_sav; fi
+	[ -f .version.debian_sav ] || cp -a .version .version.debian_sav
+	echo $(DEB_NOEPOCH_VERSION) > .version
 	dh_autoreconf -- ./bootstrap.sh
 
 # Make sure the configure script gets an CFLAGS parameter. Otherwise
 # it will build with -march=native
 override_dh_auto_configure:
-	[ -f .version.debian_sav ] || cp -a .version .version.debian_sav
-	echo $(DEB_NOEPOCH_VERSION) > .version
-
-	if [ ! -r configure.debian_sav ]; then cp -a configure configure.debian_sav; fi
-
 	chmod 755 $(CURDIR)/debian/dummyprogs/fetch
-	
 	$(FETCH_ENV) ./configure			\
 		CFLAGS="$(CFLAGS)" LDFLAGS="$(LDFLAGS)" \
 		--host=$(DEB_HOST_GNU_TYPE)		\
@@ -101,7 +100,7 @@ override_dh_auto_build:
 		menuselect/menuselect --enable DONT_OPTIMIZE menuselect.makeopts ; \
 		menuselect/menuselect --enable DEBUG_THREADS menuselect.makeopts ; \
 	fi
-	$(FETCH_ENV) $(MAKE) $(BUILDFLAGS)
+	$(FETCH_ENV) dh_auto_build -- $(BUILDFLAGS)
 
 SND_FILE=asterisk-core-sounds-en-gsm-1.4.20.tar.gz
 override_dh_clean:
@@ -112,7 +111,7 @@ override_dh_clean:
 	-test -d configs && chmod -x configs/*.sample
 
 	[ ! -f .version.debian_sav ] || mv .version.debian_sav .version
-	if [ -f configure_deborig ]; then mv configure_deborig configure; fi
+	if [ -f configure.debian_sav ]; then mv configure.debian_sav configure; fi
 
 	dh_clean
 
@@ -126,19 +125,18 @@ SUBPACKS_EXTRA_DIRS = $(SUBPACKS_EXTRA:%=$(CURDIR)/debian/asterisk-%)
 SUBPACKS_EXTRA_DIRS_MOD = $(SUBPACKS_EXTRA_DIRS:%=%/usr/lib/asterisk/modules)
 
 override_dh_auto_install:
-	$(FETCH_ENV) dh_auto_install $(BUILDFLAGS)
+	$(FETCH_ENV) dh_auto_install -- $(BUILDFLAGS) samples
 	cp -a configs $(CURDIR)/debian/tmp/usr/share/asterisk/conf
+	$(RM) -f $(CURDIR)/debian/tmp/usr/sbin/aelparse
+	$(RM) -f $(CURDIR)/debian/tmp/usr/sbin/conf2ael
+	$(RM) -f $(CURDIR)/debian/tmp/usr/sbin/muted
+	$(RM) -f $(CURDIR)/debian/tmp/usr/sbin/streamplayer
+	$(RM) -f $(CURDIR)/debian/tmp/usr/sbin/stereorize
+	$(RM) -f $(CURDIR)/debian/tmp/usr/sbin/hashtest*
+	$(RM) -f $(CURDIR)/debian/tmp/usr/sbin/refcounter
 
 override_dh_install:
 	dh_install
-	$(RM) -f $(CURDIR)/debian/asterisk/usr/sbin/aelparse
-	$(RM) -f $(CURDIR)/debian/asterisk/usr/sbin/conf2ael
-	$(RM) -f $(CURDIR)/debian/asterisk/usr/sbin/muted
-	$(RM) -f $(CURDIR)/debian/asterisk/usr/sbin/streamplayer
-	$(RM) -f $(CURDIR)/debian/asterisk/usr/sbin/stereorize
-	$(RM) -f $(CURDIR)/debian/asterisk/usr/sbin/hashtest*
-	$(RM) -f $(CURDIR)/debian/asterisk/usr/sbin/refcounter
-
 	extra_packs=`find $(SUBPACKS_EXTRA_DIRS_MOD) -name '*.so' -printf '%f\n'`\
 		    ; cd $(CURDIR)/debian/asterisk-modules/usr/lib/asterisk/modules \
 		    && rm -f $$extra_packs
@@ -157,7 +155,7 @@ override_dh_fixperms:
 	chmod o+rx  $(CURDIR)/debian/asterisk-config/etc/asterisk/manager.d
 
 override_dh_strip:
-	dh_strip --dbg-package=asterisk-dbg
+	dh_strip -a --dbg-package=asterisk-dbg
 
 print-version:
 	@@echo "Debian version:          $(DEBVERSION)"
@@ -181,7 +179,6 @@ get-orig-source:
 	@rm -rf $(TMP_TARBALL_TOP)/doc/Asterisk-Admin-Guide/
 	@rm -rf $(TMP_TARBALL_TOP)/doc/Asterisk-Admin-Guide.pdf
 	@rm -rf $(TMP_TARBALL_TOP)/codecs/ilbc
-	@rm -rf $(TMP_TARBALL_TOP)/res/pjproject
 	# While we're at it: remove some generated files that will become
 	# invalid:
 	@rm -rf $(TMP_TARBALL_TOP)/*/.makeopts
@@ -195,3 +192,4 @@ get-orig-source:
 	@echo Cleaning up...
 	@$(RM) -rf ../tarballs/asterisk-$(UPVERSION).tmp/
 
+# .PHONY: binary-indep binary-arch binary install
